--- a/web/sts.html
+++ b/web/sts.html
@@ -1,1 +1,415 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Speech to Speech Translator</title>
 
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Oswald:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Custom CSS -->
+    <link href="{{ url_for('static', filename='sts.css') }}" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="card">
+      <h1>🗣️ Speech2Speech AI</h1>
+
+      <!-- Language Selection -->
+      <div class="row g-3 mb-4">
+        <div class="col-md-6">
+          <label class="form-label fw-bold">Input Language</label>
+          <div class="dropdown">
+            <button
+              class="btn btn-outline-primary dropdown-toggle"
+              type="button"
+              id="inputLangBtn"
+              data-bs-toggle="dropdown"
+            >
+              <i class="bi bi-mic-fill"></i> English
+            </button>
+            <ul class="dropdown-menu scrollable-dropdown">
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','English')"
+                  >English</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Yoruba')"
+                  >Yoruba</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Hausa')"
+                  >Hausa</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Igbo')"
+                  >Igbo</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','French')"
+                  >French</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','German')"
+                  >German</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Chinese')"
+                  >Chinese</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Spanish')"
+                  >Spanish</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Arabic')"
+                  >Arabic</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Portugese')"
+                  >Portugese</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Russian')"
+                  >Russian</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Hindi')"
+                  >Hindi</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('input','Turkish')"
+                  >Turkish
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label fw-bold">Output Language</label>
+          <div class="dropdown">
+            <button
+              class="btn btn-outline-success dropdown-toggle"
+              type="button"
+              id="outputLangBtn"
+              data-bs-toggle="dropdown"
+            >
+              <i class="bi bi-translate"></i> Hausa
+            </button>
+            <ul class="dropdown-menu scrollable-dropdown">
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','English')"
+                  >English</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Yoruba')"
+                  >Yoruba</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Hausa')"
+                  >Hausa</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Igbo')"
+                  >Igbo</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','French')"
+                  >French</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','German')"
+                  >German</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Chinese')"
+                  >Chinese</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Spanish')"
+                  >Spanish</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Arabic')"
+                  >Arabic</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Portuguese')"
+                  >Portuguese</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Russian')"
+                  >Russian</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Hindi')"
+                  >Hindi</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  onclick="setLang('output','Turkish')"
+                  >Turkish</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="controls d-flex justify-content-center gap-3 mb-3">
+        <button class="btn btn-primary start-btn" type="button">
+          <i class="bi bi-mic-fill"></i> Start Listening
+        </button>
+        <button class="btn btn-danger d-none pause-btn" type="button">
+          <i class="bi bi-pause-fill"></i> Pause & Process
+        </button>
+        <button class="speak-btn d-none">
+          <span class="speaker">🔊</span> Speaking...
+        </button>
+      </div>
+
+      <!-- Status / Translation Box -->
+      <div id="statusMsg" class="status-box">🎤 Waiting to start...</div>
+    </div>
+
+    <!-- Bootstrap + JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      const startBtn = document.querySelector(".start-btn");
+      const pauseBtn = document.querySelector(".pause-btn");
+      const speakBtn = document.querySelector(".speak-btn");
+      const statusMsg = document.getElementById("statusMsg");
+
+      let mediaRecorder;
+      let audioChunks = [];
+      let inputLang = "English"; // default
+      let outputLang = "Hausa"; // default
+
+      // helper to update status text
+      function status(text) {
+        statusMsg.textContent = text;
+      }
+
+      // reset UI to idle state
+      function resetUI() {
+        speakBtn.classList.add("d-none");
+        startBtn.classList.remove("d-none");
+        status("🎤 Waiting to start...");
+      }
+
+      // Start recording
+      startBtn.addEventListener("click", async () => {
+        try {
+          if (!navigator.mediaDevices?.getUserMedia) {
+            alert(
+              "Your browser blocks mic access. Use Chrome/Edge on http://localhost:8000"
+            );
+            return;
+          }
+          const stream = await navigator.mediaDevices.getUserMedia({
+            audio: true,
+          });
+          mediaRecorder = new MediaRecorder(stream);
+
+          audioChunks = [];
+          mediaRecorder.ondataavailable = (e) => audioChunks.push(e.data);
+
+          mediaRecorder.onstop = onStop;
+
+          mediaRecorder.start();
+          startBtn.classList.add("d-none");
+          pauseBtn.classList.remove("d-none");
+          status("🎤 Listening...");
+        } catch (err) {
+          console.error(err);
+          status(
+            "❌ Microphone error. Open on http://localhost:8000 and allow mic."
+          );
+        }
+      });
+
+      // Stop recording
+      pauseBtn.addEventListener("click", () => {
+        if (!mediaRecorder) return;
+        pauseBtn.disabled = true;
+        mediaRecorder.stop();
+        status("⏳ Processing speech...");
+      });
+
+      // When recording stops, upload and handle response
+      async function onStop() {
+        const blob = new Blob(audioChunks, { type: "audio/webm" });
+        const formData = new FormData();
+        formData.append("audio", blob, "recording.webm");
+        formData.append("src_lang", inputLang);
+        formData.append("tgt_lang", outputLang);
+
+        try {
+          status("⏳ Processing speech...");
+          const resp = await fetch("/process", {
+            method: "POST",
+            body: formData,
+          });
+          if (!resp.ok) throw new Error(`HTTP ${resp.status}`);
+
+          status("🌍 Please wait while the audio is being processed");
+          const data = await resp.json();
+
+          if (data.audio_url) {
+            speakBtn.classList.remove("d-none");
+            status("🔊 Speaking...");
+            const audio = new Audio(data.audio_url);
+            audio.addEventListener("ended", resetUI, { once: true });
+            audio.addEventListener(
+              "error",
+              () => {
+                status("⚠️ Could not play audio.");
+                resetUI();
+              },
+              { once: true }
+            );
+            await audio.play();
+          }
+        } catch (e) {
+          console.error(e);
+          status(`❌ Error processing audio: ${e.message}`);
+          startBtn.classList.remove("d-none");
+        } finally {
+          pauseBtn.classList.add("d-none");
+          pauseBtn.disabled = false;
+        }
+      }
+
+      // Language dropdowns
+      function setLang(type, lang) {
+        if (type === "input") {
+          inputLang = lang;
+          document.getElementById(
+            "inputLangBtn"
+          ).innerHTML = `<i class="bi bi-mic-fill"></i> ${lang}`;
+        } else {
+          outputLang = lang;
+          document.getElementById(
+            "outputLangBtn"
+          ).innerHTML = `<i class="bi bi-translate"></i> ${lang}`;
+        }
+      }
+      window.setLang = setLang; // expose to onclick handlers
+    </script>
+  </body>
+</html>
